[project]
name = "analysis"
version = "0.1.0"
description = "Visualization for NPnanopubs project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adjusttext>=1.4.0",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "sparqlwrapper>=2.0.0",
]
